# aibehar

./: Dockerfile.deploy  PRODUCTION_DEPLOYMENT.md  README.md  backends.py  deploy-to-railway.sh  docker-compose.production.yml  docker-compose.simple.yml  enhanced_consciousness.py  finalIntegrationOrchestrator.py  launcher_scan_report.json  model_loader.py  package-lock.json  package.json  post_optimization_analysis.py  prepare-github-deploy.sh  professional_upgrade_report.json  professional_upgrade_report.md  pyproject.toml  railway.toml  railway_hybrid_deploy.py  securityImplementationOrchestrator.py  start_platform.sh  start_self_learning_agents.py.backup  text_generation.py
.github/ISSUE_TEMPLATE/: feature_request.yaml
Read.md/: .env.example  .gitignore  COMPLETION_SUMMARY.md  DEPLOYMENT.md  DEVELOPMENT_ROADMAP.md  EMOTIONAL_INTELLIGENCE_SUMMARY.md  EXPANSION_COMPLETE.md  FINAL_INTEGRATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  LAUNCH_SUCCESS.md  NEXT_PHASE_IMPLEMENTATION_REPORT.md  PHASE_3B_COMPLETE.md  PHASE_3_ROADMAP.md  PHASE_4_COMPLETE.md  PHASE_5_COMPLETE.md  PHASE_6_COMPLETE.md  PHASE_7_COMPLETE.md  PHASE_8_COMPLETE.md  PRODUCTION_READY_GUIDE.md  PROJECT_DEVELOPMENT_ROADMAP.md  README.md  README_ENHANCED.md  SECURITY_IMPLEMENTATION_COMPLETE.md
advanced_sovereign/: __init__.py  dimensional_personalities.py  multi_model_router.py  professional_response_engine.py
ai_core/: __init__.py  consciousness.py  generation.py  models.py  routing.py  utils.py
docs/: API.md  INSTALLATION_GUIDE.md  SECRETS_MANAGEMENT.md  SECURITY_GUIDE.md  USER_GUIDE.md  index.md  quickstart.md
docs/api/: ai_core.md  backends.md  model_management.md
docs/development/: architecture.md  module_relationships.md
monitoring/: prometheus.yml
nginx/: nginx.conf
scripts/: backup.sh  deploy-production.sh  run_tests.py  verify_dependencies.py
src/lib/: constants.ts
src/lib/apis/notes/: index.ts
src/lib/utils/: _template_old.ts  time-range.ts
tests/: conftest.py
tests/integration/: test_ai_core_integration.py
tests/unit/: test_ai_core_bridge.py
tests/unit/ai_core/: test_consciousness.py  test_generation.py  test_models.py  test_routing.py  test_utils.py
utils/: .env.example  __init__.py  api_security.py  consciousness.py  logging_utils.py  performance_monitoring.py  security_logging.py  security_utils.py  shutdown_utils.py  two_factor_auth.py
