[project]
name = "open-webui"
description = "Open WebUI"
authors = [
    { name = "Timothy Jaeryang Baek", email = "tim@openwebui.com" }
]
license = { file = "LICENSE" }
dependencies = [
    # Web framework and core dependencies
    "fastapi>=0.115.7,<0.116.0",
    "uvicorn[standard]>=0.34.2,<0.35.0",
    "pydantic>=2.11.7,<3.0.0",
    "python-multipart>=0.0.20",

    # Socket and authentication
    "python-socketio>=5.13.0,<6.0.0",
    "python-jose>=3.4.0,<4.0.0",
    "passlib[bcrypt]>=1.7.4,<2.0.0",
    "cryptography>=42.0.0",

    # HTTP and networking
    "requests>=2.32.4,<3.0.0",
    "aiohttp>=3.12.15,<4.0.0",
    "async-timeout>=4.0.0",
    "aiocache>=0.12.0",
    "aiofiles>=23.0.0",
    "starlette-compress>=1.6.0,<2.0.0",
    "httpx[socks,http2,zstd,cli,brotli]>=0.28.1,<0.29.0",

    # Database and ORM
    "sqlalchemy>=2.0.38,<2.1.0",
    "alembic>=1.14.0,<2.0.0",
    "peewee>=3.18.1,<4.0.0",
    "peewee-migrate>=1.12.2,<2.0.0",
    "psycopg2-binary>=2.9.9,<3.0.0",
    "pgvector>=0.4.0,<0.5.0",
    "PyMySQL>=1.1.1,<2.0.0",
    "bcrypt>=4.3.0,<5.0.0",

    # NoSQL and cloud
    "pymongo>=4.6.0",
    "redis>=5.0.0",
    "boto3>=1.40.5,<1.41.0",

    # Security and scheduling
    "argon2-cffi>=23.1.0,<24.0.0",
    "APScheduler>=3.10.4,<4.0.0",

    # CRDT and sandboxing
    "pycrdt>=0.12.25,<0.13.0",
    "RestrictedPython>=8.0,<9.0",

    # Logging
    "loguru>=0.7.3,<0.8.0",
    "asgiref>=3.8.1,<4.0.0",

    # AI and ML services
    "openai>=1.0.0",
    "anthropic>=0.21.0",
    "google-genai>=1.28.0,<2.0.0",
    "google-generativeai>=0.8.5,<0.9.0",
    "tiktoken>=0.6.0",

    # LangChain
    "langchain>=0.3.26,<0.4.0",
    "langchain-community>=0.3.26,<0.4.0",

    # Web scraping and vector databases
    "fake-useragent>=2.2.0,<3.0.0",
    "chromadb>=0.6.3,<0.7.0",
    "pymilvus>=2.5.0,<3.0.0",
    "qdrant-client>=1.14.3,<2.0.0",
    "opensearch-py>=2.8.0,<3.0.0",
    "playwright>=1.49.1,<2.0.0",
    "elasticsearch>=9.0.1,<10.0.0",
    "pinecone>=6.0.2,<7.0.0",
    "oracledb>=3.2.0,<4.0.0",

    # ML and embeddings
    "transformers>=4.38.0",
    "sentence-transformers>=4.1.0,<5.0.0",
    "accelerate>=0.30.0",
    "colbert-ai>=0.2.21,<0.3.0",
    "pyarrow>=20.0.0,<21.0.0",
    "einops>=0.8.1,<0.9.0",

    # Document processing
    "ftfy>=6.2.3,<7.0.0",
    "pypdf>=4.3.1,<5.0.0",
    "fpdf2>=2.8.2,<3.0.0",
    "pymdown-extensions>=10.14.2,<11.0.0",
    "docx2txt>=0.8,<0.9",
    "python-pptx>=1.0.2,<2.0.0",
    "unstructured>=0.16.17,<0.17.0",
    "nltk>=3.9.1,<4.0.0",
    "Markdown>=3.8.2,<4.0.0",
    "pypandoc>=1.15,<2.0.0",
    "pandas>=2.2.3,<3.0.0",
    "openpyxl>=3.1.5,<4.0.0",
    "pyxlsb>=1.0.10,<2.0.0",
    "xlrd>=2.0.1,<3.0.0",
    "validators>=0.35.0,<0.36.0",
    "psutil>=5.9.0",
    "sentencepiece>=0.2.0",
    "soundfile>=0.13.1,<0.14.0",
    "azure-ai-documentintelligence>=1.0.2,<2.0.0",

    # Image processing
    "pillow>=11.3.0,<12.0.0",
    "opencv-python-headless>=4.11.0.86,<5.0.0",
    "rapidocr-onnxruntime>=1.4.4,<2.0.0",
    "rank-bm25>=0.2.2,<0.3.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "pylint>=3.1.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
]

docs = [
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=2.0.0",
    "sphinxcontrib-napoleon>=0.7.0",
]

gpu = [
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "torchaudio>=2.2.0",
]

[project.scripts]
open-webui = "open_webui.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "open_webui/**/*.py",
    "open_webui/**/*.yaml",
    "open_webui/**/*.json",
]
exclude = [
    "**/__pycache__",
    "**/.mypy_cache",
    "**/.pytest_cache",
]

[tool.hatch.version]
path = "open_webui/__init__.py"
